Fixed more spurious newlines.

--- a/09integration/05integrationbypartswithlimits.tex
+++ b/09integration/05integrationbypartswithlimits.tex
@@ -15,7 +15,7 @@
 	M = \int_0^1 e^x \cdot x \, dx
 	\]
 	
-	$M$ = \answerbox{1} \\
+	$M$ = \answerbox{1} 
 	
 	
 	\hint
@@ -89,7 +89,7 @@
 	M = \int_0^\pi \sin(x) \cdot x^2 \, dx
 	\]
 	
-	$M$ = \answerbox{\pi^2-4} \\
+	$M$ = \answerbox{\pi^2-4} 
 	
 	
 	\hint
@@ -209,7 +209,7 @@
 	M = \int_0^{\frac{\pi}{2}} \cos(2x) \cdot x \, dx
 	\]
 	
-	$M$ = \answerbox{- \frac{1}{2}} \\
+	$M$ = \answerbox{- \frac{1}{2}} 
 	
 	
 	\hint
@@ -287,7 +287,7 @@
 	M = \int_0^{\frac{\pi}{2}} \sin(x) \cdot 2x \, dx
 	\]
 	
-	$M$ = \answerbox{2} \\
+	$M$ = \answerbox{2} 
 	
 	
 	\hint
@@ -363,7 +363,7 @@
 	M = \int_0^1 \ln(x) \cdot x \, dx
 	\]
 	
-	$M$ = \answerbox{- \frac{1}{4}} \\
+	$M$ = \answerbox{- \frac{1}{4}} 
 	
 	
 	\hint
@@ -438,7 +438,7 @@
 	M = \int_{\frac{\pi}{2}}^\pi - \cos(x) \cdot x \, dx
 	\]
 	
-	$M$ = \answerbox{\frac{\pi}{2}+1} \\
+	$M$ = \answerbox{\frac{\pi}{2}+1} 
 	
 	
 	\hint
@@ -515,7 +515,7 @@
 	M = \int_1^e \frac{2 \ln(x)}{x^2}  \, dx
 	\]
 	
-	$M$ = \answerbox{- \frac{4}{e}+2} \\
+	$M$ = \answerbox{- \frac{4}{e}+2} 
 	
 	\hint
 	Sæt konstanten 2 udenfor integralet
@@ -599,7 +599,7 @@
 	M = \int_0^2 e^{3x} \cdot x \, dx
 	\]
 	
-	$M$ = \answerbox{\frac{5}{9}x^6+\frac{1}{9}} \\
+	$M$ = \answerbox{\frac{5}{9}x^6+\frac{1}{9}} 
 	
 	
 	\hint
