--- a/09integration/06partialfractions.tex
+++ b/09integration/06partialfractions.tex
@@ -12,7 +12,7 @@ Opdel udtrykket herunder i partialbrøker
 I = \frac{3 + x}{(x + 1) \cdot (x + 2)}
 \]
 
-$I$ = \answerbox{\frac{2}{1 + x} - \frac{1}{2+x}} \\
+$I$ = \answerbox{\frac{2}{1 + x} - \frac{1}{2+x}} 
 
 \hint
 Udtrykket kan opdeles i partialbrøker med de ukendte konstanter $A$ og $B$.
@@ -80,7 +80,7 @@ I = \frac{2}{1 + x} - \frac{1}{2+x}
 	I = \frac{5 + 2x}{(x - 1) \cdot (x + 3)}
 	\]
 	
-	$I$ = \answerbox{\frac{7}{4(x-1)} + \frac{1}{4(x+3)}} \\
+	$I$ = \answerbox{\frac{7}{4(x-1)} + \frac{1}{4(x+3)}} 
 	
 	\hint
 	Udtrykket kan opdeles i partialbrøker med de ukendte konstanter $A$ og $B$.
@@ -148,7 +148,7 @@ I = \frac{2}{1 + x} - \frac{1}{2+x}
 	I = \frac{6 - 2x}{(x + 5) \cdot (x + 2)}
 	\]
 	
-	$I$ = \answerbox{\frac{10}{3(x+2)} - \frac{16}{3(x+5)}} \\
+	$I$ = \answerbox{\frac{10}{3(x+2)} - \frac{16}{3(x+5)}} 
 	
 	\hint
 	Udtrykket kan opdeles i partialbrøker med de ukendte konstanter $A$ og $B$.
@@ -216,7 +216,7 @@ I = \frac{2}{1 + x} - \frac{1}{2+x}
 	I = \frac{4 - 2x}{(x + 7) \cdot (x - 3)}
 	\]
 	
-	$I$ = \answerbox{\frac{-9}{5(x+7)} + \frac{1}{5(x-3)}} \\
+	$I$ = \answerbox{\frac{-9}{5(x+7)} + \frac{1}{5(x-3)}} 
 	
 	\hint
 	Udtrykket kan opdeles i partialbrøker med de ukendte konstanter $A$ og $B$.
@@ -284,7 +284,7 @@ I = \frac{2}{1 + x} - \frac{1}{2+x}
 	I = \frac{8 + 3x}{(x + 5) \cdot (x - 2)}
 	\]
 	
-	$I$ = \answerbox{\frac{1}{(x+5)} + \frac{2}{(x-2)}} \\
+	$I$ = \answerbox{\frac{1}{(x+5)} + \frac{2}{(x-2)}} 
 	
 	\hint
 	Udtrykket kan opdeles i partialbrøker med de ukendte konstanter $A$ og $B$.
@@ -352,7 +352,7 @@ I = \frac{2}{1 + x} - \frac{1}{2+x}
 	I = \frac{-3 - x}{(x + 2) \cdot (x + 4)}
 	\]
 	
-	$I$ = \answerbox{\frac{-1}{2(x+1)} - \frac{1}{2(x+4)}} \\
+	$I$ = \answerbox{\frac{-1}{2(x+1)} - \frac{1}{2(x+4)}} 
 	
 	\hint
 	Udtrykket kan opdeles i partialbrøker med de ukendte konstanter $A$ og $B$.
@@ -420,7 +420,7 @@ I = \frac{2}{1 + x} - \frac{1}{2+x}
 	I = \frac{6 + x}{(x + 1)^2 \cdot (x + 2)}
 	\]
 	
-	$I$ = \answerbox{\frac{-4}{(x+1)} + \frac{5}{(x+1)^2} + \frac{4}{(x+2)}} \\
+	$I$ = \answerbox{\frac{-4}{(x+1)} + \frac{5}{(x+1)^2} + \frac{4}{(x+2)}} 
 	
 	\hint
 	Udtrykket kan opdeles i partialbrøker med de ukendte konstanter $A$ og $B$.
@@ -522,7 +522,7 @@ I = \frac{2}{1 + x} - \frac{1}{2+x}
 	I = \frac{x - 1}{(x + 1)^2 \cdot (x + 3)}
 	\]
 	
-	$I$ = \answerbox{\frac{1}{(x+1)} - \frac{1}{(x+1)^2} - \frac{1}{(x+3)}} \\
+	$I$ = \answerbox{\frac{1}{(x+1)} - \frac{1}{(x+1)^2} - \frac{1}{(x+3)}} 
 	
 	\hint
 	Udtrykket kan opdeles i partialbrøker med de ukendte konstanter $A$ og $B$.
