--- a/01foundations/07logarithms/03logarithmrules.tex
+++ b/01foundations/07logarithms/03logarithmrules.tex
@@ -55,4 +55,282 @@ Svaret er $\log_{27}(3) = 1/3$.
 
 \newpage
 
+\begin{exercise}{Logaritme regneregler 2}
+	
+	Bestem $\log_{32}(2)$.
+	
+	\answerbox{1/5}
+	
+	\hint
+	
+	Anvend at logaritmer er det modsatte af eksponenter
+	\[
+	\log_a(b) = c \qquad \Leftrightarrow \qquad a^c = b
+	\]
+	
+	\hint
+	
+	Indsæt $a=32$, $b=2$ og $c=x$.
+	
+	\hint
+	\[
+	32^x = 2
+	\]
+	
+	\hint
+	Tag den $x$'te rod
+	
+	\hint
+	\[
+	32 = 2^{1/x}
+	\]
+	
+	\hint
+	Hvor mange gange skal 2 ganges med sig selv for at få 32?
+	
+	\hint
+	Fem gange
+	\[
+	2 \cdot 2 \cdot 2 \cdot 2 \cdot 2 = 32
+	\]
+	
+	\hint
+	Derfor må $1/x = 5$.
+	
+	\hint
+	Svaret er $\log_{32}(2) = 1/5$.
+	
+\end{exercise}
+
+\newpage
+\begin{exercise}{Logaritme regneregler 3}
+	
+	Bestem $\log_{81}(3)$.
+	
+	\answerbox{1/4}
+	
+	\hint
+	
+	Anvend at logaritmer er det modsatte af eksponenter
+	\[
+	\log_a(b) = c \qquad \Leftrightarrow \qquad a^c = b
+	\]
+	
+	\hint
+	
+	Indsæt $a=81$, $b=3$ og $c=x$.
+	
+	\hint
+	\[
+	81^x = 3
+	\]
+	
+	\hint
+	Tag den $x$'te rod
+	
+	\hint
+	\[
+	81 = 3^{1/x}
+	\]
+	
+	\hint
+	Hvor mange gange skal 3 ganges med sig selv for at få 81?
+	
+	\hint
+	Fire gange
+	\[
+	3 \cdot 3 \cdot 3 \cdot 3 = 81
+	\]
+	
+	\hint
+	Derfor må $1/x = 4$.
+	
+	\hint
+	Svaret er $\log_{81}(3) = 1/4$.
+	
+\end{exercise}
+
+\newpage
+\begin{exercise}{Logaritme regneregler 4}
+	
+	Bestem $\log_{5}(1/5)$.
+	
+	\answerbox{-1}
+	
+	\hint
+	
+	Anvend at logaritmer er det modsatte af eksponenter
+	\[
+	\log_a(b) = c \qquad \Leftrightarrow \qquad a^c = b
+	\]
+	
+	\hint
+	
+	Indsæt $a=5$, $b=1/5$ og $c=x$.
+	
+	\hint
+	\[
+	5^x = 1/5
+	\]
+	
+	\hint 
+	
+	Benyt at $1/x = x^{-1}$
+
+	\hint
+	\[
+	5^x = 5^{-1}
+	\]
+
+	\hint
+	
+	Sammenlign eksponenter
+	
+	\hint 
+	\[
+	x = -1
+	\]
+	
+	\hint
+	Svaret er $\log_{5}(1/5) = -1$
+	
+	
+\end{exercise}
+
+\newpage
+\begin{exercise}{Logaritme regneregler 5}
+	
+	Bestem $\log_{10}(2) + \log_{10}(5)$.
+	
+	\answerbox{1}
+	
+	\hint
+	
+	Benyt logaritmeregnereglen $\log(a \cdot b) =  \log(a) + \log(b)$
+
+	\hint
+	\[
+	\log_{10}(2) + \log_{10}(5) = \log_{10}(2 \cdot 5) = \log_{10}(10)
+	\]
+	
+	\hint 
+	Benyt at $\log_{x}(x) = 1$
+	
+	\hint
+	
+	Svaret er $\log_{10}(2) + \log_{10}(5) = 1$
+\end{exercise}
+
+\newpage
+\begin{exercise}{Logaritme regneregler 6}
+	
+	Bestem $\log_{2}(2/16) $.
+	
+	\answerbox{-3}
+	
+	\hint
+	
+	Benyt logaritmeregnereglen $\log(a / b) =  \log(a) - \log(b)$
+	
+	\hint
+	\[
+	\log_{2}(16/2) = \log_{2}(2) -  \log_{2}(16)
+	\]
+	
+	\hint 
+	Benyt at $\log_{x}(x) = 1$
+	
+	\hint
+	\[
+	1 - \log_{2}(16)
+	\]
+	
+	\hint
+	Benyt at $2 \cdot 2 \cdot 2 \cdot 2 = 2^4 = 16$
+	
+	\hint
+	\[
+	1 - \log_{2}(16) = 1 - \log_{2}(2^4)
+	\]
+	
+	\hint
+	Benyt logaritmeregnereglen $\log(a^x) = x \cdot \log(a)$
+		
+	\hint
+	\[	 
+	= 1- 4 \cdot \log_{2}(2)
+	\]
+	
+	\hint 
+	Benyt at $\log_{x}(x) = 1$
+	
+	\hint
+	
+	Svaret er $\log_{2}(2/16) = -3 $
+\end{exercise}
+
+\newpage
+\begin{exercise}{Logaritme regneregler 7}
+	
+	Bestem $\log_{y}(2y) $.
+	
+	\answerbox{\log_{y}(2)  +1}
+	
+	\hint
+	
+	Benyt logaritmeregnereglen $\log(a \cdot  b) =  \log(a) + \log(b)$
+	
+	\hint
+	\[
+	\log_{y}(2y) = \log_{y}(2) + \log_{y}(y)
+	\]
+	
+	\hint 
+	Benyt at $\log_{x}(x) = 1$
+	
+	\hint
+	
+	Svaret er $\log_{y}(2y) = \log_{y}(2) + 1 $
+\end{exercise}
+
+\newpage
+\begin{exercise}{Logaritme regneregler 8}
+	
+	Bestem $\log_{6}(12) + \log_{6}(3)$.
+	
+	\answerbox{2}
+	
+	\hint
+	
+	Benyt logaritmeregnereglen $\log(a \cdot b) =  \log(a) + \log(b)$
+	
+	\hint
+	\[
+	\log_{6}(12) + \log_{6}(3) = \log_{6}(12 \cdot 3) = \log_{6}(36)
+	\]
+	
+	\hint
+	Benyt at $6 \cdot 6  = 36$
+		
+	\hint 
+	\[
+	\log_{6}(36) = \log_{6}(6^2)
+	\]
+	
+	\hint
+	Benyt logaritmeregnereglen $\log(a^x) = x \cdot \log(a)$
+
+	\hint
+	\[
+	 \log_{6}(6^2) = 2 \cdot \log_{6}(6)
+	\]
+	
+	\hint
+	Benyt $\log_{x}(x) = 1$
+	
+	\hint
+	
+	Svaret er $\log_{6}(12) + \log_{6}(3) = 2$
+\end{exercise}
+
 \end{document}
