--- a/01foundations/07logarithms/05logarithmchagneofbasis.tex
+++ b/01foundations/07logarithms/05logarithmchagneofbasis.tex
@@ -6,7 +6,7 @@
 \tableofcontents
 \newpage
 
-\begin{exercise}{Skifte af logaritme baser}
+\begin{exercise}{Skifte af logaritme baser 1}
 
 Bestem $\log_{16}(8)$ ved at skifte basen for logaritmen til 2.
 
@@ -50,6 +50,398 @@ Bestem $\log_2(16)$.
 \]
 
 
+\end{exercise}
+
+\newpage
+\begin{exercise}{Skifte af logaritme baser 2}
+	
+	Bestem $\log_{9}(27)$ ved at skifte basen for logaritmen til 3.
+	
+	\answerbox{3/2}
+	
+	\hint
+	
+	Anvend formlen 
+	\[
+	\log_a(b) = \frac{\log_c(b)}{\log_c(a)}
+	\]
+	
+	\hint
+	
+	Indsæt $a=9$, $b=27$ og $c=3$.
+	
+	\hint
+	\[
+	\log_{9}(27) = \frac{\log_3(27)}{\log_3(9)}
+	\]
+	
+	\hint
+	Bestem $\log_3(27)$.
+	
+	\hint
+	\[
+	27  = 3^3	
+	\]
+	
+	
+	\hint
+	\[
+	\log_3(3^3) = 3
+	\]
+	
+	\hint
+	Bestem $\log_3(9)$.
+	
+	\hint
+	\[
+	9  = 3^2	
+	\]
+	
+	\hint
+	\[
+	\log_3(3^2) = 2
+	\]
+	
+	\hint
+	Svaret er 	$\log_{9}(27) = 3/2$
+	
+	
+\end{exercise}
+
+\newpage
+\begin{exercise}{Skifte af logaritme baser 3}
+	
+	Bestem $\log_{25}(125)$ ved at skifte basen for logaritmen til 5.
+	
+	\answerbox{3/2}
+	
+	\hint
+	
+	Anvend formlen 
+	\[
+	\log_a(b) = \frac{\log_c(b)}{\log_c(a)}
+	\]
+	
+	\hint
+	
+	Indsæt $a=25$, $b=125$ og $c=5$.
+	
+	\hint
+	\[
+	\log_{25}(125) = \frac{\log_5(125)}{\log_5(25)}
+	\]
+	
+	\hint
+	Bestem $\log_5(125)$.
+	
+	\hint
+	\[
+	125  = 5^3	
+	\]
+	
+	
+	\hint
+	\[
+	\log_5(5^3) = 3
+	\]
+	
+	\hint
+	Bestem $\log_5(25)$.
+	
+	\hint
+	\[
+	25  = 5^2	
+	\]
+	
+	\hint
+	\[
+	\log_5(5^2) = 2
+	\]
+	
+	\hint
+	Svaret er 	$\log_{25}(125) = 3/2$
+	
+	
+\end{exercise}
+
+\newpage
+\begin{exercise}{Skifte af logaritme baser 4}
+	
+	Bestem $\log_{4}(32)$ ved at skifte basen for logaritmen til 2.
+	
+	\answerbox{5/2}
+	
+	\hint
+	
+	Anvend formlen 
+	\[
+	\log_a(b) = \frac{\log_c(b)}{\log_c(a)}
+	\]
+	
+	\hint
+	
+	Indsæt $a=4$, $b=32$ og $c=2$.
+	
+	\hint
+	\[
+	\log_{4}(32) = \frac{\log_2(32)}{\log_2(4)}
+	\]
+	
+	\hint
+	Bestem $\log_2(32)$.
+	
+	\hint
+	\[
+	32  = 2^5	
+	\]
+	
+	
+	\hint
+	\[
+	\log_2(2^5) = 5
+	\]
+	
+	\hint
+	Bestem $\log_2(4)$.
+	
+	\hint
+	\[
+	4  = 2^2	
+	\]
+	
+	\hint
+	\[
+	\log_2(2^2) = 2
+	\]
+	
+	\hint
+	Svaret er 	$\log_{4}(32) = 5/2$
+	
+	
+\end{exercise}
+
+\newpage
+\begin{exercise}{Skifte af logaritme baser 5}
+	
+	Bestem $\log_{81}(9)$ ved at skifte basen for logaritmen til 3.
+	
+	\answerbox{1/2}
+	
+	\hint
+	
+	Anvend formlen 
+	\[
+	\log_a(b) = \frac{\log_c(b)}{\log_c(a)}
+	\]
+	
+	\hint
+	
+	Indsæt $a=81$, $b=9$ og $c=3$.
+	
+	\hint
+	\[
+	\log_{81}(9) = \frac{\log_3(9)}{\log_3(81)}
+	\]
+	
+	\hint
+	Bestem $\log_3(9)$.
+	
+	\hint
+	\[
+	9  = 3^2	
+	\]
+	
+	
+	\hint
+	\[
+	\log_3(3^2) = 2
+	\]
+	
+	\hint
+	Bestem $\log_3(81)$.
+	
+	\hint
+	\[
+	81  = 3^4
+	\]
+	
+	\hint
+	\[
+	\log_3(3^4) = 4
+	\]
+	
+	\hint
+	Svaret er 	$\log_{81}(9) = 2/4 = 1/2$
+	
+	
+\end{exercise}
+
+\newpage
+\begin{exercise}{Skifte af logaritme baser 6}
+	
+	Bestem $\log_{32}(16)$ ved at skifte basen for logaritmen til 2.
+	
+	\answerbox{4/5}
+	
+	\hint
+	
+	Anvend formlen 
+	\[
+	\log_a(b) = \frac{\log_c(b)}{\log_c(a)}
+	\]
+	
+	\hint
+	
+	Indsæt $a=32$, $b=16$ og $c=2$.
+	
+	\hint
+	\[
+	\log_{32}(16) = \frac{\log_2(16)}{\log_2(32)}
+	\]
+	
+	\hint
+	Bestem $\log_2(16)$.
+	
+	\hint
+	\[
+	16  = 2^4	
+	\]
+	
+	
+	\hint
+	\[
+	\log_2(2^4) = 4
+	\]
+	
+	\hint
+	Bestem $\log_2(32)$.
+	
+	\hint
+	\[
+	32  = 2^5
+	\]
+	
+	\hint
+	\[
+	\log_2(2^5) = 5
+	\]
+	
+	\hint
+	Svaret er 	$\log_{32}(16) = 4/5$
+	
+	
+\end{exercise}
+
+\newpage
+\begin{exercise}{Skifte af logaritme baser 7}
+	
+	Bestem $\log_{27}(81)$ ved at skifte basen for logaritmen til 3.
+	
+	\answerbox{4/3}
+	
+	\hint
+	
+	Anvend formlen 
+	\[
+	\log_a(b) = \frac{\log_c(b)}{\log_c(a)}
+	\]
+	
+	\hint
+	
+	Indsæt $a=27$, $b=81$ og $c=3$.
+	
+	\hint
+	\[
+	\log_{27}(81) = \frac{\log_3(81)}{\log_3(27)}
+	\]
+	
+	\hint
+	Bestem $\log_3(81)$.
+	
+	\hint
+	\[
+	81  = 3^4	
+	\]
+	
+	
+	\hint
+	\[
+	\log_3(3^4) = 4
+	\]
+	
+	\hint
+	Bestem $\log_3(27)$.
+	
+	\hint
+	\[
+	27  = 3^3
+	\]
+	
+	\hint
+	\[
+	\log_3(3^3) = 3
+	\]
+	
+	\hint
+	Svaret er 	$\log_{27}(81) = 4/3$
+	
+	
+\end{exercise}
+
+\newpage
+\begin{exercise}{Skifte af logaritme baser 8}
+	
+	Bestem $\log_{64}(16)$ ved at skifte basen for logaritmen til 4.
+	
+	\answerbox{2/3}
+	
+	\hint
+	
+	Anvend formlen 
+	\[
+	\log_a(b) = \frac{\log_c(b)}{\log_c(a)}
+	\]
+	
+	\hint
+	
+	Indsæt $a=64$, $b=16$ og $c=4$.
+	
+	\hint
+	\[
+	\log_{64}(16) = \frac{\log_4(16)}{\log_4(64)}
+	\]
+	
+	\hint
+	Bestem $\log_4(16)$.
+	
+	\hint
+	\[
+	16  = 4^2	
+	\]
+	
+	
+	\hint
+	\[
+	\log_4(4^2) = 2
+	\]
+	
+	\hint
+	Bestem $\log_4(64)$.
+	
+	\hint
+	\[
+	64  = 4^3
+	\]
+	
+	\hint
+	\[
+	\log_4(4^3) = 3
+	\]
+	
+	\hint
+	Svaret er 	$\log_{64}(16) = 2/3$
+	
+	
 \end{exercise}
 
 \newpage
