--- a/01foundations/07logarithms/08exponentsandlogarithms.tex
+++ b/01foundations/07logarithms/08exponentsandlogarithms.tex
@@ -78,4 +78,510 @@ Svaret er $5$.
 
 \newpage
 
+\begin{exercise}{Eksponenter og logaritmer - 2}
+	
+	Bestem værdien af udtrykket
+	\[
+	\log_2\left( \frac{2^5 \cdot 8^2}{16 \cdot \left(\frac{1}{4}\right)^2} \right)
+	\]
+	
+	\answerbox{11}
+	
+	\hint
+	Gå først efter at forenkle brøken, derefter kan vi se på logaritmen.
+	
+	\hint
+	Reducer brøken 
+	
+	\hint
+	\[
+	\left( \frac{2^5 \cdot 8^2}{16 \cdot \left(\frac{1}{4}\right)^2} \right) = \left( \frac{2^5 \cdot 8^2}{16 \cdot \left(\frac{1}{16}\right)} \right)
+	\]
+	
+	\hint
+	\[
+	= \frac{2^5 \cdot 8^2}{1}
+	\]
+	
+	\hint
+	Benyt at $8=2^3$ og reducer udtryk
+	
+	\hint
+	\[
+	2^5 \cdot 8^2 = 2^5 \cdot (2^3)^2 = 2^5 \cdot 2^6
+ 	\]
+	
+	\hint
+	\[
+	2^5 \cdot 2^6 = 2^{11}
+	\]
+	
+	
+	\hint
+	Nu kan vi se på selve logaritmen.
+	
+	\hint
+	\[
+	\log_2\left(2^{11}\right)
+	\]
+
+	
+	\hint
+	Træk eksponenten ned foran
+	
+	\hint
+	\[
+	\log_2\left(2^{11}\right) = 11 \cdot \log_2(2)
+	\]
+	
+	\hint
+	Evaluer logaritmen
+	
+	\hint
+	\[
+	11 \cdot \log_2(2) = 11
+	\]
+	
+	\hint
+	Svaret er $11$.
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Eksponenter og logaritmer - 3}
+	
+	Bestem værdien af udtrykket
+	\[
+	\log_4\left(\frac{8^4 \cdot 16^2}{8^2 \cdot \left(\frac{1}{2} \right)^2} \right)
+	\]
+	
+	\answerbox{8}
+	
+	\hint
+	Gå først efter at forenkle brøken, derefter kan vi se på logaritmen.
+	
+	\hint
+	Reducer brøken 
+	
+	\hint
+	\[
+	\left(\frac{8^4 \cdot 16^2}{8^2 \cdot \left(\frac{1}{2} \right)^2} \right) = \left(\frac{8^2 \cdot 16^2}{ \left(\frac{1}{4} \right)} \right)
+	\]
+	
+	\hint
+	\[
+	= 8^2 \cdot 16^2 \cdot 4
+	\]
+	
+	\hint
+	Benyt at $16^2=(4^2)^2 = 4^4$ og reducer udtryk
+	
+	\hint
+	\[
+	8^2 \cdot 16^2 \cdot 4 = 8^2 \cdot 4^4 \cdot 4 	
+	\]
+	
+	\hint
+	Benyt at $8^2 = (2 \cdot 4)^2 = 2^2 \cdot 4^2 = 4^3$
+	
+	\hint
+	\[
+	8^2 \cdot 4^4 \cdot 4 = 4^3 \cdot 4^4 \cdot 4
+	\]
+	
+	\hint
+	\[
+	= 4^8
+	\]
+		
+	\hint
+	Nu kan vi se på selve logaritmen.
+	
+	\hint
+	\[
+	\log_4\left(4^8\right)
+	\]
+	
+	
+	\hint
+	Træk eksponenten ned foran
+	
+	\hint
+	\[
+	\log_4\left(4^{8}\right) = 8 \cdot \log_4(4)
+	\]
+	
+	\hint
+	Evaluer logaritmen
+	
+	\hint
+	\[
+	8 \cdot \log_4(4) = 8
+	\]
+	
+	\hint
+	Svaret er $8$.
+	
+\end{exercise}
+
+\newpage
+\begin{exercise}{Eksponenter og logaritmer - 4}
+	
+	Bestem værdien af udtrykket
+	\[
+	\log_3\left(\frac{\left(\frac{1}{3}\right)^2 \cdot 9^6}{3^3 \cdot 9^2} \right)
+	\]
+	
+	\answerbox{3}
+	
+	\hint
+	Gå først efter at forenkle brøken, derefter kan vi se på logaritmen.
+	
+	\hint
+	Reducer brøken 
+	
+	\hint
+	\[
+	\left(\frac{\left(\frac{1}{3}\right)^2 \cdot 9^6}{3^3 \cdot 9^2} \right) = \frac{\frac{1}{9} \cdot 9^6}{3^3 \cdot 9^2}
+	\]
+	
+	\hint
+	\[
+	\frac{\frac{1}{9} \cdot 9^6}{3^3 \cdot 9^2} = \frac{9^5}{3^3 \cdot 9^2}
+	\]
+	
+	\hint
+	\[
+	 \frac{9^5}{3^3 \cdot 9^2} =  \frac{9^3}{3^3} 
+	\]
+	
+	\hint
+	Benyt at $9^3=(3^2)^3 = 3^6$ og reducer udtryk
+	
+	\hint
+	\[
+	\frac{9^2}{3^3} = \frac{3^6}{3^3} 
+	\]
+	
+	\hint
+	\[
+	\frac{3^6}{3^3} = 3^3
+	\]
+
+	
+	\hint
+	Nu kan vi se på selve logaritmen.
+	
+	\hint
+	\[
+	\log_3\left(3^3\right)
+	\]
+	
+	
+	\hint
+	Træk eksponenten ned foran
+	
+	\hint
+	\[
+	\log_3\left(3^{3}\right) = 3 \cdot \log_3(3)
+	\]
+	
+	\hint
+	Evaluer logaritmen
+	
+	\hint
+	\[
+	3 \cdot \log_3(3) = 3
+	\]
+	
+	\hint
+	Svaret er $3$.
+	
+\end{exercise}
+
+\newpage
+\begin{exercise}{Eksponenter og logaritmer - 5}
+	
+	Bestem værdien af udtrykket
+	\[
+	\log_2\left(\frac{6^2 \cdot 8^3 \cdot  \left( \frac{1}{6}\right)^3}{4^3 \cdot \frac{1}{6}} \right)
+	\]
+	
+	\answerbox{3}
+	
+	\hint
+	Gå først efter at forenkle brøken, derefter kan vi se på logaritmen.
+	
+	\hint
+	Reducer brøken 
+	
+	\hint
+	\[
+	\left(\frac{6^2 \cdot 8^3 \cdot \left( \frac{1}{6}\right)^3}{4^3 \cdot \frac{1}{6}} \right) = 
+	\left(\frac{6^2 \cdot 8^3 \cdot \frac{1}{6^3}}{4^3 \cdot \frac{1}{6}} \right)
+	\]
+	
+	\hint
+	\[
+	\left(\frac{6^2 \cdot 8^3 \cdot \frac{1}{6^3}}{4^3 \cdot \frac{1}{6}} \right) = 
+	\left(\frac{8^3 \cdot \frac{1}{6}}{4^3 \cdot \frac{1}{6}} \right)
+	\]
+	
+	\hint
+	\[
+	\left(\frac{8^3 \cdot \frac{1}{6}}{4^3 \cdot \frac{1}{6}} \right) = \frac{8^3}{4^3}
+	\]
+	
+	\hint
+	Benyt at $8^3=(2^3)^3 = 2^9$ og reducer udtryk
+	
+	\hint
+	\[
+	\frac{8^3}{4^3} = \frac{2^9}{4^3}
+	\]
+	
+	\hint
+	Benyt at $4^3=(2^2)^3 = 2^6$ og reducer udtryk
+	
+	\hint
+	\[
+	\frac{2^9}{4^3} = \frac{2^9}{2^6} = 2^3
+	\]
+	
+	
+	\hint
+	Nu kan vi se på selve logaritmen.
+	
+	\hint
+	\[
+	\log_2\left(2^3\right)
+	\]
+	
+	
+	\hint
+	Træk eksponenten ned foran
+	
+	\hint
+	\[
+	\log_2\left(2^{3}\right) = 3 \cdot \log_2(2)
+	\]
+	
+	\hint
+	Evaluer logaritmen
+	
+	\hint
+	\[
+	3 \cdot \log_2(2) = 3
+	\]
+	
+	\hint
+	Svaret er $3$.
+	
+\end{exercise}
+
+\newpage
+\begin{exercise}{Eksponenter og logaritmer - 6}
+	
+	Bestem værdien af udtrykket
+	\[
+	\log_3\left(\frac{\left(\frac{1}{9}\right)^4 \cdot 3^4}{\left(\frac{1}{9}\right)^5 \cdot 9^3} \right)
+	\]
+	
+	\answerbox{0}
+	
+	\hint
+	Gå først efter at forenkle brøken, derefter kan vi se på logaritmen.
+	
+	\hint
+	Reducer brøken 
+	
+	\hint
+	\[
+	\left(\frac{\left(\frac{1}{9}\right)^4 \cdot 3^4}{\left(\frac{1}{9}\right)^5 \cdot 9^3} \right) = 
+	\left(\frac{3^4}{\left(\frac{1}{9}\right) \cdot 9^3} \right)
+	\]
+	
+	\hint
+	\[
+	\left(\frac{3^4}{\left(\frac{1}{9}\right) \cdot 9^3} \right) = 
+	\left(\frac{3^4}{9^2} \right)
+	\]
+	
+	
+	\hint
+	Benyt at $9^2=(3^2)^2 = 3^4$ og reducer udtryk
+	
+	\hint
+	\[
+	\left(\frac{3^4}{9^2} \right) = 
+	\left(\frac{3^4}{3^4} \right) = 1
+	\]
+
+	
+	\hint
+	Nu kan vi se på selve logaritmen.
+	
+	\hint
+	Benyt $\log_x (1) = 0$.
+	
+	\hint
+	\[
+	\log_3\left(1 \right) = 0
+	\]
+	
+	
+	\hint
+	Svaret er $0$.
+	
+\end{exercise}
+
+\newpage
+\begin{exercise}{Eksponenter og logaritmer - 7}
+	
+	Bestem værdien af udtrykket
+	\[
+	\log_5\left(\frac{\left(\frac{1}{5}\right)^3 \cdot 25^4}{5 \cdot 125} \right)
+	\]
+	
+	\answerbox{1}
+	
+	\hint
+	Gå først efter at forenkle brøken, derefter kan vi se på logaritmen.
+	
+	\hint
+	Reducer brøken 
+	
+	\hint
+	\[
+	\left(\frac{\left(\frac{1}{5}\right)^3 \cdot 25^4}{5 \cdot 125} \right) = 
+	\left(\frac{\left(\frac{1}{5^3}\right) \cdot 25^4}{5 \cdot 125} \right)
+	\]
+	
+	\hint
+	Benyt at $25^4 = (5^2)^4 = 5^8$
+	
+	\hint
+	\[
+	\left(\frac{\left(\frac{1}{5^3}\right) \cdot 5^8}{5 \cdot 125} \right) = 
+	\left(\frac{5^5}{5 \cdot 125} \right)
+	\]
+	
+	\hint
+	Benyt at $125 = 5^3$
+	
+	\hint
+	\[
+	\left(\frac{5^5}{5 \cdot 125} \right) = \left(\frac{5^5}{5 \cdot 5^3} \right)
+	\]
+	
+	\hint
+	\[
+	\left(\frac{5^5}{5 \cdot 5^3} \right) = \left(\frac{5^5}{5^4} \right) = 5
+	\]
+	
+	
+	\hint
+	Nu kan vi se på selve logaritmen.
+	
+	\hint
+	\[
+	\log_5\left(5\right) = 1
+	\]
+	
+	
+	\hint
+	Svaret er $1$.
+	
+\end{exercise}
+
+\newpage
+\begin{exercise}{Eksponenter og logaritmer - 8}
+	
+	Bestem værdien af udtrykket
+	\[
+	\log_2\left( 4^3 \cdot 8^2 \right) - \log_2 \left( \left(\frac{1}{4}\right)^2 \cdot 16^2\right)
+	\]
+	
+	\answerbox{8}
+	
+	\hint
+	Gå først efter at forenkle brøkerne, derefter kan vi se på logaritmerne.
+	
+	\hint
+	Reducer den første brøk 
+	
+	\hint
+	Benyt at $4^3 = (2^2)^3 = 2^6$
+  	
+	\hint
+	\[
+	\log_2\left( 4^3 \cdot 8^2 \right) = \log_2\left( 2^6 \cdot 8^2 \right) 
+	\]
+	
+	\hint
+	Benyt at $8^2 = (2^3)^2 = 2^6$
+	
+	\hint
+	\[
+	\log_2\left( 2^6 \cdot 8^2 \right) = \log_2\left( 2^6 \cdot 2^6 \right)
+	\]
+	
+	\hint
+	\[
+	\log_2\left( 2^6 \cdot 2^6 \right) = \log_2 (2^{12})
+	\]
+	
+	
+	\hint
+	Træk eksponenten ned foran
+	
+	\hint
+	\[
+	\log_2\left( 2^{12} \right) = 12 \cdot \log_2(2)  = 12
+	\]
+	
+	\hint 
+	Reducer den anden brøk
+	
+	\hint
+	\[
+	 \log_2\left( \left(\frac{1}{4}\right)^2 \cdot 16^2\right) = \log_2\left( \left(\frac{1}{16}\right) \cdot 16^2\right)
+	\]
+	
+	\hint
+	\[
+	\log_2\left( \left(\frac{1}{16}\right) \cdot 16^2\right) = \log_2\left(16 \right)
+	\]
+	
+	\hint
+	Benyt at $16 = 2^4$
+	
+	\hint
+	\[
+	\log_2\left(16 \right) = \log_2\left(2^4 \right)
+	\]
+	
+	\hint
+	Træk eksponenten ned foran
+	
+	\hint
+	\[
+	\log_2\left( 2^{4} \right) = 4 \cdot \log_2(2)  = 4
+	\]
+	
+	\hint
+	Bestem det samlede resultat
+	
+	\hint
+	\[
+	\log_2\left( 4^3 \cdot 8^2 \right) - \log_2 \left( \left(\frac{1}{4}\right)^2 \cdot 16^2\right) = 12 - 4 = 8
+	\]
+	
+	\hint
+	Svaret er $8$.
+	
+\end{exercise}
+
+\newpage
 \end{document}
