Added exercise meta information.

--- a/07linearalgebra/05bestemmeinversevhagausselimination.tex
+++ b/07linearalgebra/05bestemmeinversevhagausselimination.tex
@@ -2,7 +2,8 @@
 \usepackage{tekvideoexercises}
 
 \begin{document}
-Bestem den inverse af en matrice vha. Gauss elimination
+\exercisename{Find den inverse vha. Gauss elimination}
+\exercisedescription{Bestem den inverse af en matrice vha. Gauss elimination}
 \tableofcontents
 \newpage
 
