Minor changes in exercises.

--- a/01foundations/07logarithms/07limitsandracebetweenfunctions.tex
+++ b/01foundations/07logarithms/07limitsandracebetweenfunctions.tex
@@ -314,11 +314,11 @@ Indsæt grænser for de enkelte led.
 	\answerbox{- uendelig}
 	
 	\hint
-	Indsæt $x=.\infty$ og se om det giver mening
+	Indsæt $x=-\infty$ og se om det giver mening
 	
 	\hint
 	\[
-	\lim_{x \to -\infty} \frac{x^3 + 2x}{x^2 + 3x} = \frac{(-\infty)^3 + 2(-\infty)}{(-\infty)^2 + 3(-\infty)} = \frac{-\infty}{-\infty}
+	\lim_{x \to -\infty} \frac{x^3 + 2x}{x^2 + 3x} = \frac{(-\infty)^3 + 2(-\infty)}{(-\infty)^2 + 3(-\infty)} = \frac{-\infty}{\infty-\infty}
 	\]
 	
 	\hint
