Fixed error in exercises.

--- a/01foundations/09limits/07limitsandracebetweenfunctions.tex
+++ b/01foundations/09limits/07limitsandracebetweenfunctions.tex
@@ -156,7 +156,7 @@ Indsæt grænser for de enkelte led.
 	
 	\hint
 	\[
-	\lim_{x \to 0} \frac{e^{-x}/\ln(x)+ \ln(x)/\ln(x)}{x/\ln(x)+\ln(x)\ln(x)} = \lim_{x \to 0} \frac{e^{-x}/\ln(x)+ 1}{x/\ln(x)+1}
+	\lim_{x \to 0} \frac{e^{-x}/\ln(x)+ \ln(x)/\ln(x)}{x/\ln(x)+\ln(x)/\ln(x)} = \lim_{x \to 0} \frac{e^{-x}/\ln(x)+ 1}{x/\ln(x)+1}
 	\]
 	
 	\hint
