--- a/03differentiation/07lhopital.tex
+++ b/03differentiation/07lhopital.tex
@@ -582,7 +582,7 @@ Altså ender vi i en situation, hvor noget endeligt (2) deles med uendelig. Dett
 \begin{exercise}{LHopital 10}
 Bestem grænseværdien.
 \[
-\lim_{x \to 1} \frac{\ln(x)}{x^2-1}
+\lim_{x \to \infty} \frac{\ln(x)}{x^2-1}
 \] 
 
 Er svaret $\infty$ skrives der \emph{uendelig} i svarboksen.
