Make it possible to specify the streak length in the latex files.

--- a/09integration/01integrationofsimpleexpressions.tex
+++ b/09integration/01integrationofsimpleexpressions.tex
@@ -3,6 +3,8 @@
 
 \begin{document}
 \exercisename{Integration af basis funktioner}
+
+\streaklength{10}
 \tableofcontents
 
 \begin{exercise}{Integration af basis funktioner 1-1}
