Updated style file to support insertion of images.

--- a/unplaced/tekvideoexercises.sty
+++ b/unplaced/tekvideoexercises.sty
@@ -26,6 +26,7 @@
 \newcommand{\hint}{\subsection*{Hint}}
 \newcommand{\exercisename}[1]{\noindent #1}
 
+\newcommand{\image}[1]{\includegraphics[scale=0.4]{#1}}
 
 \newcommand{\lommeregnertilladt}{\par Lommeregner er tilladt.}
 
