Changed how exercises are shown in the pdf files.

--- a/unplaced/tekvideoexercises.sty
+++ b/unplaced/tekvideoexercises.sty
@@ -24,7 +24,8 @@
 
 
 \newcommand{\hint}{\subsection*{Hint}}
-\newcommand{\exercisename}[1]{\noindent #1}
+\newcommand{\exercisename}[1]{\par\noindent \textbf{Navn: }#1}
+\newcommand{\exercisedescription}[1]{\par\noindent \textbf{Beskrivelse: }#1}
 
 \newcommand{\image}[1]{\includegraphics[scale=0.4]{#1}}
 
