--- a/09integration/04integrationbyparts.tex
+++ b/09integration/04integrationbyparts.tex
@@ -95,7 +95,7 @@
 	\]
 	og kald den ukendte integrationskonstant for A.
 	
-	\answerbox{-x^2 \cdot \cos(x) + 2x \cdot \sin(x) - 2\cos(x) + A} 
+	\answerbox{-x^2 \cdot \cos(x) + 2x \cdot \sin(x) + 2\cos(x) + A} 
 	
 	
 	\hint
@@ -171,7 +171,7 @@
 	\hint
 	
 	\[
-	= -x^2 \cdot \cos(x) + \left[ 2x \cdot \sin(x) - 2\cos(x) + C_2 \right]
+	= -x^2 \cdot \cos(x) + \left[ 2x \cdot \sin(x) + 2\cos(x) + C_2 \right]
 	\]
 	
 	\hint
@@ -181,7 +181,7 @@
 	\hint
 	
 	\[
-	= -x^2 \cdot \cos(x) + 2x \cdot \sin(x) - 2\cos(x) + A
+	= -x^2 \cdot \cos(x) + 2x \cdot \sin(x) + 2\cos(x) + A
 	\]
 	
 	
