Rettet fejl i beregninger til to opgaver.

--- a/11differentialequations/02separablediffequationgeneral.tex
+++ b/11differentialequations/02separablediffequationgeneral.tex
@@ -345,7 +345,7 @@ hvor $A=K_2-K_1$
 	
 	Udtrykket omskrives vha. logaritmeregler
 	\[
-	y = A \cdot e^{\frac{1}{2} \ln(x)} = A \cdot e^{\ln(x^{\frac{1}{2})}} = A \cdot x^{\frac{1}{2}} = A \cdot \sqrt{x}
+	y = A \cdot e^{\frac{1}{2} \ln(x)} = A \cdot e^{\ln \left(x^{\frac{1}{2}} \right)} = A \cdot x^{\frac{1}{2}} = A \cdot \sqrt{x}
 	\]
 	
 \end{exercise}
