--- a/11differentialequations/04firstorderlineardiffequation.tex
+++ b/11differentialequations/04firstorderlineardiffequation.tex
@@ -696,7 +696,7 @@ y(x) = 1 + A e^{\frac{-1}{3}x^3}
 	\hint 
 	Indsæt $u$ og $du$
 	\[
-	\int e^{\frac{-1}{6}x^6}x^2 \, dx = \int -e^{u} \, du = -e^{u} + C_2 = -e^{\frac{1}{6}x^6} + C_2
+	\int e^{\frac{-1}{6}x^6} \cdot x^5 \, \cdot \frac{-dx}{x^5} = \int -e^{u} \, du = -e^{u} + C_2 = -e^{\frac{-1}{6}x^6} + C_2
 	\]
 	
 	\hint
@@ -712,7 +712,7 @@ y(x) = 1 + A e^{\frac{-1}{3}x^3}
 	
 	\hint
 	\[
-	y(x) = e^{\frac{1}{6}x^6} \cdot \left(-e^{\frac{1}{3}x^3} \right) + C_2 \cdot e^{\frac{1}{6}x^6} 
+	y(x) = e^{\frac{1}{6}x^6} \cdot \left(-e^{\frac{-1}{6}x^6} \right) + C_2 \cdot e^{\frac{1}{6}x^6} 
 	\]
 	
 	\hint
